--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/email-input/page.tsx",
+    "src/app/login/page.jsx",
+    "src/app/dfs-bfs/page.tsx"
+  ],
   "exclude": ["node_modules"]
 }
