--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.16.13",
+    "axios": "^1.7.9",
     "next": "14.2.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-intersection-observer": "^9.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
