--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     "src/app/email-input/page.tsx",
     "src/app/login/page.jsx",
     "src/app/dfs-bfs/page.tsx",
-    "src/app/infinite-scroll/page.jsx"
+    "src/app/infinite-scroll/page.jsx",
+    "src/app/temp.jsx"
   ],
   "exclude": ["node_modules"]
 }
