--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.16.13",
     "axios": "^1.7.9",
+    "json-server": "^1.0.0-beta.3",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
