--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-intersection-observer": "^9.15.1"
+    "react-intersection-observer": "^9.15.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
